[tool.poetry]
name = "syntheticbee-cogs"
version = "0.1.0"
description = "Cogs for Red-DiscordBot"
authors = ["Ben Armstrong <synrg@debian.org>"]
license = "AGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
wiktionaryparser = "^0.0.97"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
