[tool.bandit]
exclude_dirs = ["tests"]

[tool.flake8]
max-line-length = 100

[tool.poetry]
name = "syntheticbee-cogs"
version = "0.1.0"
description = "Cogs for Red-DiscordBot"
authors = ["Ben Armstrong <synrg@debian.org>"]
license = "AGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
wiktionaryparser = "^0.0.97"
Red-DiscordBot = "^3.4.18"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
